Atualização em "Contato.html"

--- a/Contato.html
+++ b/Contato.html
@@ -64,7 +64,7 @@
            
             <div class="content" >
 
-                <fieldset>
+                <form action="#"><fieldset>
                     <legend>Deixe-Nos Uma Mensagem</legend>
                     <label>Nome:</label> <input type="text"></imput><br>
                     <label>E-mail:</label> <input type="email"></imput><br>
@@ -77,6 +77,7 @@
                     <button type="submit">
                         Enviar Mensagem
                     </button>
+                </form>
                     <blockquote>*Counteudos retirados do site da <a href="https://www.topclinpet.com.br/" target="_blank"> Topclin</a>*</blockquote>
             </div>
 
